@@ -1,5 +1,6 @@
 V.Next
 ----------
+- [MINOR] Format thread+correlationId metadata only once logging is clearly opted-in (#1917)
 
 V.9.1.0
 ----------
